--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -80,6 +80,8 @@ const { title } = Astro.props;
         </div>
     </div>
 
+    <script src="./script/onInit.ts"></script>
+
     <!-- Bootstrap core JavaScript-->
     <script src="/vendor/jquery/jquery.min.js" is:inline></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js" is:inline></script>
