--- a/src/components/navbar/Sidebar.astro
+++ b/src/components/navbar/Sidebar.astro
@@ -1,7 +1,6 @@
 ---
-const { title } = Astro.props;
+const { title, activeNav } = Astro.props;
 ---
-
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
@@ -16,8 +15,10 @@ const { title } = Astro.props;
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+    <li 
+    id="dashboard-nav"
+    class="nav-item">
+        <a class="nav-link" href="/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
     </li>
@@ -30,15 +31,19 @@ const { title } = Astro.props;
         Data
     </div>
 
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+    <li 
+    id="order-nav"
+    class="nav-item">
+        <a class="nav-link" href="/order">
             <i class="fas fa-fw fa-table"></i>
             <span>Order</span></a>
     </li>
 
     <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+    <li 
+    id="users-nav"
+    class="nav-item">
+        <a class="nav-link" href="/users">
             <i class="fas fa-fw fa-table"></i>
             <span>Users</span></a>
     </li>
@@ -48,26 +53,34 @@ const { title } = Astro.props;
         Category
     </div>
 
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+    <li 
+    id="papan-bunga-nav"
+    class="nav-item">
+        <a class="nav-link" href="/category?name=papan-bunga">
             <i class="fas fa-fw fa-table"></i>
             <span>Papan Bunga</span></a>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+    <li
+    id="bouquet-nav" 
+    class="nav-item">
+        <a class="nav-link" href="/category?name=bouquet">
             <i class="fas fa-fw fa-table"></i>
             <span>Bouquet</span></a>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+    <li 
+    id="money-cake-nav"
+    class="nav-item">
+        <a class="nav-link" href="/category?name=money-cake">
             <i class="fas fa-fw fa-table"></i>
             <span>Money Cake</span></a>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+    <li 
+    id="snack-tower-nav"
+    class="nav-item">
+        <a class="nav-link" href="/category?name=snack-tower">
             <i class="fas fa-fw fa-table"></i>
             <span>Snack Tower</span></a>
     </li>
@@ -81,3 +94,38 @@ const { title } = Astro.props;
     </div>
 
 </ul>
+
+<script is:inline>
+    const path = window.location.pathname;
+    switch (path) {
+        case '/':
+            document.getElementById('dashboard-nav').classList.add('active');
+            break;
+        case '/order':
+            document.getElementById('order-nav').classList.add('active');
+            break;
+        case '/users':
+            document.getElementById('users-nav').classList.add('active');
+            break;
+        default:
+            break;
+    }
+
+    const searchParams = new URLSearchParams(window.location.search);
+    switch (searchParams.get('name')) {
+        case 'papan-bunga':
+            document.getElementById('papan-bunga-nav').classList.add('active');
+            break;
+        case 'bouquet':
+            document.getElementById('bouquet-nav').classList.add('active');
+            break;
+        case 'money-cake':
+            document.getElementById('money-cake-nav').classList.add('active');
+            break;
+        case 'snack-tower':
+            document.getElementById('snack-tower-nav').classList.add('active');
+            break;
+        default:
+            break;
+    }
+</script>
