add data to user

--- a/src/components/users/Content.astro
+++ b/src/components/users/Content.astro
@@ -1,4 +1,6 @@
-<div id="content">
+<div 
+class="invisible"
+id="content-users">
     
     <!-- Begin Page Content -->
     <div class="container-fluid">
@@ -28,7 +30,6 @@
                             </tr>
                         </tfoot>
                         <tbody>
-                            
                         </tbody>
                     </table>
                 </div>
@@ -36,3 +37,5 @@
         </div>
     </div>
 </div>
+
+<script src="./script/onInit.ts"></script>
