--- a/src/components/category/Content.astro
+++ b/src/components/category/Content.astro
@@ -11,7 +11,7 @@ id="content-category">
                 <span aria-hidden="true">&times;</span>
             </button>
             <div class="modal-body">
-                <img id="image" src="" alt="">
+                <img id="image" src="" alt="" height="100px">
             </div>
         </div>
         </div>
