--- a/src/components/order/Content.astro
+++ b/src/components/order/Content.astro
@@ -49,6 +49,7 @@ id="content-order">
                                 <th>Order Date</th>
                                 <th>Order Status</th>
                                 <th>Next Step</th>
+                                <th>Print</th>
                             </tr>
                         </thead>
                         <tfoot>
@@ -62,6 +63,7 @@ id="content-order">
                                 <th>Order Date</th>
                                 <th>Order Status</th>
                                 <th>Next Step</th>
+                                <th>Print</th>
                             </tr>
                         </tfoot>
                         <tbody>
